[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This is a Rust RSA cryptosystem implementation"
repository = "https://github.com/aagbotemi/rsa-cryptosystem"
keywords = ["sentinel", "mempool", "transaction"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
async-tungstenite = { version = "0.27.0", features = ["tokio-runtime", "tokio-native-tls"] }
futures-util = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.124"
serde = { version = "1.0.207", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "1.0.63"

